@@ -252,6 +252,7 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            lty=1,
                            width=1,
                            loop.angle=0,
+                           loop.angle2=0,
                            arrow.mode=i.get.arrow.mode),
                          plot=list(layout=layout.random,
                            margin=0))
